[gd_scene load_steps=14 format=3 uid="uid://ee7vmkdifujk"]

[ext_resource type="Script" path="res://levels/demo_scene/demo_scene.gd" id="1_vw68c"]
[ext_resource type="PackedScene" uid="uid://qn2ndofseqlm" path="res://entities/player/player.tscn" id="2_ok6g0"]
[ext_resource type="PackedScene" uid="uid://dmba417rg84tb" path="res://entities/interactables/door/door.tscn" id="4_s3383"]

[sub_resource type="SystemFont" id="SystemFont_t2xgm"]
font_names = PackedStringArray("Tinkoff Sans")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_nflnt"]
font = SubResource("SystemFont_t2xgm")
font_size = 42

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_al051"]
albedo_color = Color(0.270222, 0.270222, 0.270222, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_awnil"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_5upgx"]
sky_material = SubResource("ProceduralSkyMaterial_awnil")

[sub_resource type="Environment" id="Environment_n2e0q"]
background_mode = 2
sky = SubResource("Sky_5upgx")
tonemap_mode = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_y4sc8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uwhrt"]
albedo_color = Color(0.393086, 0.393086, 0.393085, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_obcdt"]
material = SubResource("StandardMaterial3D_uwhrt")
size = Vector2(10, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4djxv"]
points = PackedVector3Array(-5, 0, -5, -5, 0, 5, 5, 0, -5, 5, 0, 5)

[node name="DemoScene" type="Node3D"]
script = ExtResource("1_vw68c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BasicControls" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press and Hold  to Select Direction
Release to Move!"
label_settings = SubResource("LabelSettings_nflnt")
horizontal_alignment = 1

[node name="TryAgainHint" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Oh, the door is closed
let's try again..."
label_settings = SubResource("LabelSettings_nflnt")
horizontal_alignment = 1

[node name="Walls" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.77618, 0.5, -1.50601)

[node name="SlotDoor" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-1, 0, -8.74226e-08, 0, 1, 0, 8.74226e-08, 0, -1, -1.45321, -0.5, 5.49713)
use_collision = true
size = Vector3(1, 1, 1.54896)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.49399, 0, 1.77618)
use_collision = true
size = Vector3(11, 1, 1)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D4" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6.50601, 0, 1.77618)
use_collision = true
size = Vector3(11, 1, 1)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D2" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.50601, 0, -3.22382)
use_collision = true
size = Vector3(1, 1, 11)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D3" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.506009, 0, 6.77618)
use_collision = true
size = Vector3(1, 1, 9)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D5" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.75181, 0, 1.77618)
use_collision = true
size = Vector3(1, 1, 6.50332)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D6" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.89253, 0, -1.46257)
use_collision = true
size = Vector3(1, 1, 2.53624)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D7" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00263751)
use_collision = true
size = Vector3(1, 1, 2.55777)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D8" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -0.5, 5.50111)
use_collision = true
size = Vector3(1, 1, 1.56082)
material = SubResource("StandardMaterial3D_al051")

[node name="CSGBox3D9" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.72168, -0.5, 4.22097)
use_collision = true
size = Vector3(1, 1, 3.55702)
material = SubResource("StandardMaterial3D_al051")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.721493, -0.599653, 0.34621, -9.83852e-09, 0.5, 0.866026, -0.692422, 0.624832, -0.360747, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n2e0q")

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 10, 6.5)
fov = 50.0

[node name="Player" parent="." instance=ExtResource("2_ok6g0")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.265, 0.5, 3.478)

[node name="LevelEndTrigger" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.07037, 0.5, 3.9863)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelEndTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.532045, 0, 0)
shape = SubResource("BoxShape3D_y4sc8")

[node name="OpenSlotDoor" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.48432, 0.5, 3.92054)

[node name="CollisionShape3D" type="CollisionShape3D" parent="OpenSlotDoor"]
shape = SubResource("BoxShape3D_y4sc8")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("PlaneMesh_obcdt")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_4djxv")

[node name="Door" parent="." instance=ExtResource("4_s3383")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35209, 0.8244, 0)

[connection signal="body_entered" from="LevelEndTrigger" to="." method="_on_level_end_trigger_body_entered"]
[connection signal="body_entered" from="OpenSlotDoor" to="." method="_on_open_slot_door_body_entered"]
